notice restyle to avoid overlap

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -5,7 +5,7 @@
 table {
   width: 95%;
   border: solid;
-  margin: 5% auto;
+  margin: 2% auto;
 }
 
 tr {
