--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -16,7 +16,7 @@ nav {
 
 .product_image {
   position:relative;
-  bottom: 50px;
+  bottom: 40px;
 }
 
 .project a {
@@ -97,7 +97,7 @@ nav {
   color: #FF3399;
   font-weight: 600;
   position: absolute;
-  top: 35px;
+  top: 38px;
   width: 100%;
   z-index: 1000;
 }
